# coc-verifier-bot

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.giveaway  Dockerfile.news  Dockerfile.tournament  LICENSE  README.md  SETUP.md  bot.py  fairness_simulation.py  giveaway_fairness.py  giveawaybot.py  newsbot.py  noxfile.py  pyproject.toml  requirements.txt  test_giveaway_fairness.py  tournamentbot.py
.github/workflows/: ci.yml  deploy.yml
bots/: __init__.py  __main__.py  config.py  giveaway.py  shadow.py  tournament.py  unified.py  verification.py
cocbot/: clients.py  commands.py  config.py  main.py  tasks.py  utils.py
infra/: .gitignore  ci-cd.tf  dns.tf  main.tf  robots.txt  sitemap.xml  white-devel-cup.html  white-devel-redirect.js
infra/modules/bot_service/: main.tf  outputs.tf  variables.tf
match_automation/: __init__.py  analyzer.py  eval_report.json  feedback.py  nlp.py  ocr.py  service.py
scripts/: migrate_tournament_table.py  reset_bracket_progress.py
tests/: conftest.py  test_advanced_coverage.py  test_bot.py  test_bot_proxy.py  test_bot_simple.py  test_bots_config.py  test_bots_shadow.py  test_coc_api_auth.py  test_config.py  test_giveaway_fairness_extended.py  test_giveawaybot.py  test_giveawaybot_extended.py  test_giveawaybot_simple.py  test_main.py  test_match_automation.py  test_match_automation_feedback.py  test_match_automation_nlp.py  test_newsbot.py  test_newsbot_simple.py  test_shadow.py  test_simple_coverage.py  test_tournament_bracket.py  test_tournament_captain_roles.py  test_tournament_storage.py  test_tournament_validation.py  test_tournamentbot_commands.py  test_tournamentbot_helpers.py  test_tourney_simulator.py  test_unified_bot.py  test_verification_simple.py
tests/domain/: test_verification_business_rules.py
tests/infrastructure/: test_coc_api_reliability.py
tournament_bot/: __init__.py  bracket.py  models.py  simulator.py  storage.py  tourney_simulator.py  validation.py
tournament_bot/data/: tourney_seed_tags.txt
verifier_bot/: __init__.py  approvals.py  coc_api.py  logging_utils.py
